--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,8 @@
-<h2 id="title">Welcome to Ember.js</h2>
+<h1 id="title">Ember Knight</h1>
+
+<ul>
+  <li>{{#link-to 'index'}}Index{{/link-to}}</li>
+  <li>{{#link-to 'about'}}About{{/link-to}}</li>
+</ul>
 
 {{outlet}}
