Add Customers, call remote Server

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,6 +3,7 @@
 <ul>
   <li>{{#link-to 'index'}}Index{{/link-to}}</li>
   <li>{{#link-to 'about'}}About{{/link-to}}</li>
+  <li>{{#link-to 'customers'}}Customers{{/link-to}}</li>
 </ul>
 
 {{outlet}}
